# timefyi

./: README.md  SKILL.md  demo.tape  pyproject.toml  server.json  smithery.yaml
skills/time-tools/: SKILL.md
src/timefyi/: __init__.py  api.py  cli.py  engine.py  mcp_server.py
tests/: test_api.py  test_cli.py  test_engine.py  test_mcp.py
