[project]
name = "timefyi"
version = "0.1.0"
description = "Pure Python timezone engine — current time, time differences, business hours overlap, sunrise/sunset. Zero dependencies core."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "FYIPedia" }]
keywords = [
    "timezone",
    "time",
    "utc",
    "dst",
    "sunrise",
    "sunset",
    "business-hours",
    "time-difference",
    "time-conversion",
    "world-clock",
    "zoneinfo",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Environment :: Console",
]
dependencies = []

[project.optional-dependencies]
sun = ["astral>=3.2"]
api = ["httpx>=0.27"]
cli = ["typer>=0.15", "rich>=13.0"]
mcp = ["mcp>=1.0"]
all = ["timefyi[sun,api,cli,mcp]"]

[project.scripts]
timefyi = "timefyi.cli:app"

[project.entry-points."mcp.servers"]
timefyi = "timefyi.mcp_server:mcp"

[project.urls]
Homepage = "https://timefyi.com"
"World Clock" = "https://timefyi.com/worldclock/"
Documentation = "https://timefyi.com/developers/"
Repository = "https://github.com/fyipedia/timefyi"
Issues = "https://github.com/fyipedia/timefyi/issues"
Changelog = "https://github.com/fyipedia/timefyi/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/timefyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF022"]  # __all__ grouped by category

[tool.mypy]
python_version = "3.10"
strict = true

[dependency-groups]
dev = [
    "astral>=3.2",
    "httpx>=0.27",
    "mcp>=1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "rich>=13.0",
    "ruff>=0.15.4",
    "typer>=0.15",
]
